apply the new catppuccin gtk changes and other stuff

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,24 +1,25 @@
-monitor=eDP-1,1920x1080@60.06,0x0,1
+monitor=,preferred,auto,1
 
 
-env = GDK_BACKEND, wayland,x11,*
-env = MOZ_ENABLE_WAYLAND, 1
-env = PATH, "$HOME/.local/bin:$HOME/.cargo/bin:$PATH"
-env = QT_AUTO_SCREEN_SCALE_FACTOR, 1
-env = QT_QPA_PLATFORM, wayland;xcb
-env = QT_QPA_PLATFORMTHEME, qt5ct
-env = QT_STYLE_OVERRIDE, kvantum
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION, 1
-env = XCURSOR_SIZE, 24
-env = XCURSOR_THEME, Posy_Cursor_Mono
-env = XDG_CURRENT_DESKTOP, Hyprland
-env = XDG_SESSION_DESKTOP, Hyprland
-env = XDG_SESSION_TYPE, wayland
+env = GDK_BACKEND,wayland,x11,*
+env = GTK_THEME,catppuccin-mocha-lavender-standard+default
+env = MOZ_ENABLE_WAYLAND,1
+env = PATH,"$HOME/.local/bin:$HOME/.cargo/bin:$PATH"
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_STYLE_OVERRIDE,kvantum
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,Posy_Cursor_Mono
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
 
 
 exec-once = waybar & hyprpaper & ffplay -v 0 -nodisp -autoexit ~/.config/hypr/scripts/xp & mpd & mako & nm-applet --indicator & udiskie &
 exec-once = /usr/bin/lxpolkit
-exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Catppuccin-Mocha-Standard-Lavender-Dark"
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme "catppuccin-mocha-lavender-standard+default"
 exec-once = gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Posy_Cursor_Mono"
 exec-once = gsettings set org.gnome.desktop.interface font-name "Noto Sans"
@@ -95,7 +96,7 @@ misc {
 }
 
 
-windowrulev2 = float, class:^(nm-connection-editor|pavucontrol|xdg-desktop-portal-gtk)$
+windowrulev2 = float, class:^(nm-connection-editor|org.pulseaudio.pavucontrol|xdg-desktop-portal-gtk)$
 windowrulev2 = float, class:^(codium)$, title:^(Open Folder|Open File)$
 windowrulev2 = float, class:^(thunar)$, title:^(File Operation Progress|Confirm to replace files)$
 windowrulev2 = float, class:floating
