--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -2,7 +2,7 @@ source = $HOME/.config/hypr/mocha.conf
 
 $accent = $lavender
 $accentAlpha = $lavenderAlpha
-$font = CaskaydiaCove Nerd Font
+$font = JetBrainsMono Nerd Font
 
 # GENERAL
 general {
@@ -12,7 +12,7 @@ general {
 
 # BACKGROUND
 background {
-    monitor = eDP-1
+    monitor =
     path = ~/.config/background/wall.png
     blur_passes = 3
     color = $base
@@ -45,7 +45,7 @@ label {
 # USER AVATAR
 
 image {
-    monitor = eDP-1
+    monitor =
     path = ~/.face
     size = 100
     border_color = $accent
@@ -57,7 +57,7 @@ image {
 
 # INPUT FIELD
 input-field {
-    monitor = eDP-1
+    monitor =
     size = 300, 60
     outline_thickness = 4
     dots_size = 0.2
