--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -99,6 +99,7 @@ misc {
 windowrulev2 = float, class:^(nm-connection-editor|org.pulseaudio.pavucontrol|xdg-desktop-portal-gtk)$
 windowrulev2 = float, class:^(codium)$, title:^(Open Folder|Open File)$
 windowrulev2 = float, class:^(thunar)$, title:^(File Operation Progress|Confirm to replace files)$
+windowrulev2 = float, class:^(telegram-desktop)$, title:^(Save File)$
 windowrulev2 = float, class:floating
 windowrulev2 = opacity 0.95 0.95 class:^(Alacritty|thunar)$
 windowrulev2 = suppressevent maximize class:.*
